[package]
name = "json-toolkit-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "json_toolkit_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
json-core = { path = "../crates/json-core", features = ["schema"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
