[package]
name = "json-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core JSON processing library for json-toolkit"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
base64 = "0.22"
urlencoding = "2.1"
indexmap = { version = "2", features = ["serde"] }
csv = "1.3"

# JSONPath - use jsonpath_lib for compatibility
jsonpath_lib = "0.3"

# JSON Schema validation (native only, may have WASM issues)
jsonschema = { version = "0.18", optional = true }

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["schema"]
schema = ["dep:jsonschema"]
